--- a/index.html
+++ b/index.html
@@ -4,30 +4,23 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1>Homework</h1>
-        <h2>1. დაწერე ფუნქცია, რომელიც მიიღებს a და b
-            პარამეტრებს და დააბრუნებს ტექსტს
-            “ტოლია” თუ a უდრის b-ს, ხოლო
-            წინააღმდეგ შემთხვევაში, დააბრუნებს “არ
-            არის ტოლი”.გაითვალისწინე, რომ a და b ყოველთვის
-            ერთი და იგივე ტიპის არ არის</h2>
+        <h1>Homework 2</h1>
         <h2>
-            2. დაწერე ფუნქცია, რომელიც პარამეტრად
-            მიიღებს ტემპერატურას ფარენჰეიტებში და
-            დააბრუნებს ტემპერატურას ცელსიუსში
-            თუ პარამეტრი არ არის რიცხვითი მონაცემი
-            დააბრუნე - false
+            1. მოცემულია მასივი 
+            [{name: 'Temo', age: 25}, 
+            {name: 'Lasha', age: 21}, 
+            {name: 'Ana', age: 28}]
+            დაწერე ფუნქცია, რომელიც პარამეტრად მიიღებს user - ების მასივს და 
+            დააბრუნებს ყველაზე პატარა ასაკის მქონე ადამიანის სახელს
         </h2>
         <h2>
-            3. დაწერე ფუნქცია, რომელიც პარამეტრად
-            მიიღებს a (პირველი რიცხვი), b (მეორე
-            რიცხვი) და operation (+, -, *, /) და
-            დააბრუნებს ახალ მნიშვნელობას,
-            რომელიც მიიღება ამ ორ რიცხვზე operation
-            ცვლადში განსაზღვრული ოპერაციით.
-            თუ a და b არ არიან რიცხვები, ან თუ
-            operation ცვლადში არის უცნობი, ოპერაცია
-            დააბრუნე - false
+            2. დაწერე ფუნქცია, რომელიც პარამეტრად მიიღებს user ობიექტს და
+            დააბრუნებს იგივე მნიშვნელობების მქონე ახალ (განსხვავებულ) ობიექტს    
+        </h2>
+        <h2>
+            3.დაწერე პროგრამა, სადაც ორი a და b მომხმარებლები აგორებენ კამათელს 
+            მანამ, სანამ არ გაგორდება, რომელიც უფრო ნაკლებ ცდაში გააგორებს სამიანს
+            ის არის გამარჯვებული
         </h2>
         <script src="./main.js"></script>
     </body>
